# CppND-Capstone-Autonomous-FPV

./: .gitignore  Project_Rubric.md  README.md
.gitignore/: .gitignore
src/drone_planning/include/: gate_detector.h  trajectory_generator.h
src/drone_planning/src/: drone_planning_node.cpp  gate_detector.cpp  trajectory_generator.cpp
src/gate_detection/: CMakeLists.txt  package.xml
src/gate_detection/include/: gate.h  gate_detector.h  trajectory_generator.h
src/gate_detection/src/: gate.cpp  gate_detector.cpp  gate_visulization_node.cpp  trajectory_generator.cpp
src/gate_visulization/: CMakeLists.txt
src/gate_visulization/src/: gate_visulization_node.cpp
src/so3_control/src/: so3_control_nodelet.cpp
src/so3_quadrotor_simulator/launch/: simulator.launch
src/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
src/trajectory_generator/src/: trajectory_generator_node.cpp
